haburger menu added

--- a/index.html
+++ b/index.html
@@ -32,32 +32,37 @@
                                 <span class="tooltiptext"
                                     >Block Showing Case</span
                                 >
-                            </button></a
-                        >
+                            </button>
+                        </a>
                     </li>
                     <li>
                         <a href="./pages/flexcontainer.html"
                             ><button class="button tooltip">
                                 Gallery
                                 <span class="tooltiptext">Flexbox</span>
-                            </button></a
-                        >
+                            </button>
+                        </a>
                     </li>
                     <li>
                         <a href="./pages/floatleft.html"
                             ><button class="button tooltip">
                                 Taco
                                 <span class="tooltiptext">Float left</span>
-                            </button></a
-                        >
+                            </button>
+                        </a>
                     </li>
                     <li>
                         <a href="./pages/floatright.html"
                             ><button class="button tooltip">
                                 Chichen Itza
                                 <span class="tooltiptext">Float right</span>
-                            </button></a
-                        >
+                            </button>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="side-menu-small">
+                    <li>
+                        <img src="./img/menusmall.svg" alt="Hamburger icon" />
                     </li>
                 </ul>
             </div>
