--- a/pages/blockshowingcase.html
+++ b/pages/blockshowingcase.html
@@ -60,6 +60,11 @@
                         >
                     </li>
                 </ul>
+                <ul class="side-menu-small">
+                    <li>
+                        <img src="../img/menusmall.svg" alt="Hamburger icon" />
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--Here I used main_blockshowing like container although all the requirements are on paragraph-->
