--- a/pages/flexcontainer.html
+++ b/pages/flexcontainer.html
@@ -60,6 +60,11 @@
                         >
                     </li>
                 </ul>
+                <ul class="side-menu-small">
+                    <li>
+                        <img src="../img/menusmall.svg" alt="Hamburger icon" />
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--I made 3 containers main_flex is larger and inside this I have 2 section-->
