--- a/pages/floatright.html
+++ b/pages/floatright.html
@@ -60,6 +60,11 @@
                         >
                     </li>
                 </ul>
+                <ul class="side-menu-small">
+                    <li>
+                        <img src="../img/menusmall.svg" alt="Hamburger icon" />
+                    </li>
+                </ul>
             </div>
         </nav>
         <!--Here main float is a block element inside of this I there is a section a block element as well-->
